<resources>
    <string name="app_name">MapManager</string>
    <string name="login_head">Login</string>
    <string name="login_button">Login</string>
    <string name="register_head">Register</string>
    <string name="register_button_text">Register</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Password confirm</string>
    <string name="want_to_login_text">Already have an account? Login</string>
    <string name="want_to_register_text">Don`t have an account? Register</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="fill_all_fields_text">Please fill all fields</string>
    <string name="enter_email_text">Please enter your email</string>
    <string name="recovery_mail_send_text">The recovery mail has been sent to </string>
    <string name="mail_send_error_text">Mail send error: </string>
    <string name="enter_success_text">Login success.</string>
    <string name="enter_error_text">Login error: </string>
    <string name="register_success_text">Register success.</string>
    <string name="register_error_text">Register error: </string>
    <string name="different_passwords_text">Passwords are different.</string>
    <string name="successful_registration">Registration is successful and the data is saved.</string>
    <string name="save_data_error">Data saving error: </string>
    <string name="error_account_delete">Account deletion aborted.</string>
    <string name="pass_change">Password changed</string>
    <string name="pass_not_change">The password has not been changed</string>
    <string name="successful_save">Saved successfully</string>
    <string name="error_file_load">File upload error</string>
    <string name="nick_not_be_empty">The nickname cannot be empty.</string>
    <string name="enter_correct_number">Enter the correct phone number.</string>
    <string name="nick_need_less">The nickname must not exceed </string>
    <string name="age_need_less">The age must be at least </string>
    <string name="chars"> characters.</string>
    <string name="age"> years.</string>
    <string name="section">  section</string>
    <string name="tranport">Transport: </string>
    <string name="wait">Waiting</string>
    <string name="time_error">Invalid start and end time</string>
    <string name="need_name">The route must have a name</string>
    <string name="media_error">Error when uploading media: </string>
    <string name="step">step</string>
    <string name="step_2">steps</string>
    <string name="step_3">steps</string>
    <string name="calories">calorie</string>
    <string name="caloies_2">calories</string>
    <string name="caloies_3">calories</string>
    <string name="copy_message">Copied message</string>
    <string name="need_delete_profile">Do you really want to delete the profile?</string>
    <string name="need_delete_profile_2">It will not be possible to restore the profile after deletion</string>
    <string name="delete_profile">Delete profile</string>
    <string name="cancel">Cancel</string>
    <string name="program_info">About the application</string>
    <string name="route">Routes</string>
    <string name="map">Map</string>
    <string name="chat">Chats</string>
    <string name="profile">Profile</string>
    <string name="accept">Confirm</string>
    <string name="name">Name</string>
    <string name="ages">Age</string>
    <string name="city">City</string>
    <string name="len">Long</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="members">Participants</string>
    <string name="back">Back</string>
    <string name="save_route">Save route</string>
    <string name="route_info">To create a point, tap and hold the desired location on the map. To move a point, pinch it and drag it.</string>
    <string name="my_route">My routes</string>
    <string name="further">Next</string>
    <string name="delete">Delete</string>
    <string name="focus">Focus</string>
    <string name="waypoint_list">List of route points:</string>
    <string name="user_name">User name</string>
    <string name="birthday">Date of birth</string>
    <string name="leave">Log out</string>
    <string name="change_pass">Change password</string>
    <string name="change_personal_data">Change personal data</string>
    <string name="load">Loading...</string>
    <string name="change_data">Changing data</string>
    <string name="nick">Nickname</string>
    <string name="people_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="mail">Mail</string>
    <string name="country">Country</string>
    <string name="select_data">Select a date</string>
    <string name="enter_nick">Enter a nickname</string>
    <string name="enter_name">Enter a name</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="select_country">Specify the country</string>
    <string name="select_city">Specify the city</string>
    <string name="copy_text">Copy the text</string>
    <string name="delete_message">Delete message</string>
    <string name="change">Change</string>
    <string name="create_route">Creating a journey</string>
    <string name="description">Description</string>
    <string name="data">Date</string>
    <string name="time">Time</string>
    <string name="post">Upload</string>
    <string name="confirm">Accept</string>
    <string name="post_route">Lay out your route</string>
    <string name="create_new_pass">Come up with a password</string>
    <string name="yandex_api_url">https://yandex.ru/legal/maps_api</string>
</resources>